<resources>
    <string name="app_name">CSC335_ChatServer</string>

    <!-- Strings related to login -->
    <string name="log_title">Gnomie</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_recover"><u>Forgot Your Password?</u></string>

    <!-- Strings related to registration -->
    <string name="reg_title">Register As a New User!</string>
    <string name="reg_user">Username</string>
    <string name="reg_real">Real Name</string>
    <string name="reg_confirm">Confirm that badboy</string>
    <string name="reg_register">Register!</string>
    <string name="error_email">You haven\'t entered an email!</string>
    <string name="error_user">You haven\'t entered a username</string>
    <string name="error_pw">You haven\'t entered a password</string>
    <string name="error_pw_match">Your passwords don\'t match</string>
    <string name="auth_success">Registration Successful</string>
    <!-- also uses prompt_email and promp_password -->
    <string name="avali_title">Start a new chat!</string>

    <!-- Strings related to pop avaliable chat lists -->

    <!-- Strings used by FireBase -->
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>

</resources>
